dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=tarvarusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=tarvarus-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=tarvarus-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=tarvarus-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=tarvarus-wallet.1
endif
endif
